--- a/src/app/components/shopping-list/shopping-list.component.html
+++ b/src/app/components/shopping-list/shopping-list.component.html
@@ -10,6 +10,7 @@
       (click)="onEdit(i)"
       >
       {{ing.name}} ({{ing.amount}})
+      <!-- <button class="btn btn-danger" (click)="onDelete.bind(i)">X</button> -->
     </a>
     </ul>
   </div>
