--- a/src/app/components/recipes/recipes.component.html
+++ b/src/app/components/recipes/recipes.component.html
@@ -1,6 +1,9 @@
 <div class="row">
   <div class="col-md-5">
-    <app-recipe-list></app-recipe-list>
+    <app-recipe-list>
+      <h1>Hello World</h1>
+      
+    </app-recipe-list>
   </div>
   <div class="col-md-7">    
     <router-outlet></router-outlet>
