--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,1 +1,7 @@
-<h1>WelCome  to Recipes Book</h1>
+<div class="row">
+    <div class="col-xs-12">
+        <div class="text-center h-header">
+            <h1 class="display-1 ">WelCome  to Recipes Book</h1>
+        </div>
+    </div>
+</div>
